refactor: replace deprecated Double constructor with valueOf